logs/validate.20260322-200519.log
error[E0277]: the trait bound `Value: std::cmp::Eq` is not satisfied
   --> src/Chap47/StructChainedHashTable.rs:287:30
    |
287 |                 chain_lookup(&self.head, key)
    |                 ------------ ^^^^^^^^^^ the trait `std::cmp::Eq` is not implemented for `Value`
    |                 |
    |                 required by a bound introduced by this call
    |
note: required by a bound in `Chap47::StructChainedHashTable::StructChainedHashTable::chain_lookup`
   --> src/Chap47/StructChainedHashTable.rs:178:56
    |
178 |         fn chain_lookup<Key: Eq + View + Clone, Value: Eq + Clone>(
    |                                                        ^^ required by this bound in `chain_lookup`
help: consider further restricting type parameter `Value` with trait `Eq`
    |
267 |         impl<Key: Eq + View + Clone, Value: Clone + std::cmp::Eq> EntryTrait<Key, Value> for ChainList<Key, Value> {
    |                                                   ++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
Elapsed: 14s
